<resources>
    <string name="app_name">BrontooMovieTask</string>
    <string name="splash_text">BRONTOO</string>
    <string name="no_internet_message_first_time">Seem like you do not have any internet connection.Please check your internet connection</string>
    <string name="no_internet_message">Seem like you do not have any internet connection. Please check your internet connection. Otherwise you would not able see latest movie</string>
    <string name="continue_text">Continue</string>
    <string name="exit_text">Exit</string>
    <string name="movie_list_header_text">Movies</string>
    <string name="search_hint">Search movie</string>
    <string name="no_search_Text">No search result found</string>
    <string name="sort_text">Sort</string>
    <string name="sort_by_popularity_text">By Popularity</string>
    <string name="sort_by_date_text">By Date</string>
    <string name="sort_by_name_text">By Name</string>
    <string name="favorite_text">Favourites</string>
    <string name="watchList_text">WatchList</string>
    <string name="options">Options</string>
    <string name="wip_message">Work in progress</string>
    <string name="exit_app_text">Double tab to exit</string>
    <string name="add_favourite">Add to Favourite</string>
    <string name="add_watchList">Add to WatchList</string>
    <string name="remove_favourite">Remove from Favourite</string>
    <string name="remove_watchList">Remove from WatchList</string>
    <string name="favourite_header">Favourite</string>
    <string name="watchList_header">WatchList</string>
    <string name="empty_watchList">Watch list is empty.</string>
    <string name="empty_favouriteList">Favourite list is empty.</string>



</resources>
