<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.brontoo.ui.MovieListActivity">

        <RelativeLayout
            android:id="@+id/header_container"
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_height"
            android:background="@color/colorPrimary"
            android:elevation="7dp">

            <ImageView
                android:id="@+id/menu"
                android:layout_width="@dimen/header_height"
                android:layout_height="@dimen/header_height"
                android:layout_alignParentLeft="true"
                android:padding="18dp"
                android:src="@drawable/ic_menu" />

            <TextView
                android:id="@+id/header_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/movie_list_header_text"
                android:textColor="@color/white"
                android:textSize="@dimen/header_text_size" />

            <ImageView
                android:id="@+id/search"
                android:layout_width="@dimen/header_height"
                android:layout_height="@dimen/header_height"
                android:layout_alignParentRight="true"
                android:padding="18dp"
                android:background="?android:attr/selectableItemBackground"
                android:src="@drawable/ic_search" />

            <LinearLayout
                android:id="@+id/search_container"
                android:layout_width="match_parent"
                android:layout_height="@dimen/header_height"
                android:background="@color/white"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/search_back"
                    android:layout_width="@dimen/header_height"
                    android:layout_height="@dimen/header_height"
                    android:padding="18dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:src="@drawable/ic_arrow_back_blue" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/search_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:backgroundTint="@color/colorPrimary"
                    android:focusable="true"
                    android:hint="@string/search_hint"
                    android:paddingRight="10dp"
                    android:textColorHint="@color/hint_text_color"
                    android:textSize="14sp" />

            </LinearLayout>

        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/header_container"
            android:layout_marginTop="5dp"
            android:scrollbars="vertical" />

        <RelativeLayout
            android:id="@+id/no_search_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header_container"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_sentiment_very_dissatisfied" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/image"
                android:text="@string/no_search_Text"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </RelativeLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/splashText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:theme="@style/AppTheme.Custom"
            android:visibility="gone" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/drawer"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/menu_header"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/colorPrimary">

            <ImageView
                android:id="@+id/menu_back"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:background="?android:attr/selectableItemBackground"
                android:src="@drawable/ic_arrow_back_white" />

            <TextView
                android:id="@+id/menu_header_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/options"
                android:textColor="@color/white"
                android:textSize="17sp"

                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/sort_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/menu_header">

            <ImageView
                android:id="@+id/sort_image"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_sort" />

            <TextView
                android:id="@+id/sort_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/sort_image"
                android:text="@string/sort_text"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sort_text"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/sort_image"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/sortByPopuLarityRadio"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorPrimary"
                    android:text="@string/sort_by_popularity_text"
                    android:textColor="@color/black"
                    android:textSize="11sp" />

                <RadioButton
                    android:id="@+id/sortByNameRadio"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorPrimary"
                    android:text="@string/sort_by_name_text"
                    android:textColor="@color/black"
                    android:textSize="11sp" />

                <RadioButton
                    android:id="@+id/sortByDate"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorPrimary"
                    android:text="@string/sort_by_date_text"
                    android:textColor="@color/black"
                    android:textSize="11sp" />
            </RadioGroup>

            <RelativeLayout
                android:id="@+id/sort_separator"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@+id/radioGroup"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:alpha="0.5"
                android:background="@color/black">

            </RelativeLayout>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/favourite_container"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="?android:attr/selectableItemBackground"
            android:layout_below="@+id/sort_container">

            <ImageView
                android:id="@+id/favourite"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_favorite" />

            <TextView
                android:id="@+id/favourite_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/favourite"
                android:text="@string/favorite_text"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <RelativeLayout
                android:id="@+id/favourite_seperator"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:alpha="0.5"
                android:background="@color/black">

            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/watchList_container"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="?android:attr/selectableItemBackground"
            android:layout_below="@+id/favourite_container">

            <ImageView
                android:id="@+id/watchList"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_playlist_add" />

            <TextView
                android:id="@+id/watchList_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/watchList"
                android:text="@string/watchList_text"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <RelativeLayout
                android:id="@+id/watchList_seperator"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:alpha="0.5"
                android:background="@color/black">

            </RelativeLayout>

        </RelativeLayout>


    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>
